# Nichify

./: .cache  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  models.json  oldMain.py  openAIAPI.md  openai_Auth.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  spotify_auth.py  tools.json
.github/workflows/: ci.yml
src/: .cache  ai_commands.py  ai_handler.py  constants.py  db_handler.py  db_setup.py  logging_config.py  main.py  settings.py  spotify_handler.py
src/ai_tools/: menu_tools.json
tests/: conftest.py  test_db_persistence.py  test_duplicates.py  test_fuzzy_match.py  test_openai_stream.py
